Correct CSS syntax and align headings
Fix CSS formatting and add text alignment to h3 and h4.

--- a/style.css
+++ b/style.css
@@ -10,9 +10,9 @@ p {
     font-size: 200;
 }
 
-h3 {
-    font-size: 20 px;
+h3{
+    text-align: left;
 }
-h5 {
-    font-size: large:
+h4{
+    text-align: left;
 }
